# home-task

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/actors/: CMakeLists.txt  client.cpp  client.hpp  server.cpp  server.hpp
src/core/: CMakeLists.txt  api.cpp  api.hpp  log.hpp  magic_numbers.hpp  model.hpp  network_mock.cpp  network_mock.hpp
src/exe/: CMakeLists.txt  client_server.cpp  client_server_fat.cpp  client_server_slow.cpp  client_server_template.hpp  client_server_test.cpp  hello_world.cpp  server_test.cpp
src/logic/: CMakeLists.txt  client_state.cpp  client_state.hpp  server_state.hpp
